# MRPhantom

./: CHANGELOG  MANIFEST.in  README.md  TODO  pyproject.toml
example/: Example_2D.py  Example_3D.py  Example_Simple.py  Example_Utility.py
mrphantom_src/: Function.py  __init__.py  nmr_para.xml  utility.py
mrphantom_src/ext/: main.cpp  slime.cpp  slime.h
