[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "MRPhantom"
version = "3.0.2"
dependencies = ["numpy", "scipy"]

description = "Volumetric dynamic MRI Phantom of a Slime with respiratory and cardiac motion, and M0, phase, T1, T2, B0, coil sensitivity maps, boosted by a parallel C-API Backend."
keywords = ["MRI", "Phantom", "Motion", "Quantitative"]
authors = [{name = "Ryan", email = "ryan_shanghaitech@proton.me"}]

license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/RyanShanghaitech/MRPhantom"
Examples = "https://github.com/RyanShanghaitech/MRPhantom/tree/main/example"